{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "3aa5aa10-b945-4631-9181-1415b50260a8",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e77fb522-3c82-4b4f-be8e-db953c07ba3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e72de0d-b47c-457f-95fc-d44f4e778696",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UISystem",
            "id": "0e539552-8df2-4638-a0bc-daf205b2d3d1",
            "actions": [
                {
                    "name": "PauseButton",
                    "type": "Button",
                    "id": "4d46f772-c874-4df5-b846-f27c8aa7ec8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8ff650c-b33c-4173-9708-ee0fc534e4c9",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}